# GaussEliminator

./: CMakeLists.txt  README.md  dependencies.d  main.cpp  matrix.h
docs/: backward_phase.md  forward_phase.md  forward_phase.txt
interface/: GEA.h  iterator.h  matrix.h  overloads.h
src/: GEA.cpp  GEA.h  backward_phase.cpp  forward_phase.cpp  gea.cpp  iterator.cpp  main.cpp  matrix.cpp  matrix.h  overloads.h
